# mesozoic

./: Cargo.toml  LICENSE.md  README.md  deno.json  mod.ts  test.ts  version.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish.yml
crates/mesozoic/: Cargo.toml
crates/mesozoic/src/: lib.rs
lib/: abstractBuilder.ts  builder.ts  compiler.ts  context.ts  deps.ts  entrypoint.ts  entrypointFile.ts  file.ts  fileBag.ts  fs.ts  graph.ts  importMap.ts  interfaces.ts  logger.ts  optimizer.ts  patterns.ts  source.ts  sourceFile.ts  sourceFileBag.ts  strip.ts  swc.ts  swc_mesozoic.generated.js  swc_mesozoic_bg.wasm  types.ts  url.ts  utils.ts  vendor.ts  virtualFile.ts  virtualSourceFile.ts
lib/graph/: createGraph.ts  load.ts  resolve.ts  specifiers.ts
lib/processor/: css.ts
lib/sources/: file.ts  fileBag.ts  gatherSources.ts  path.ts  sourceFile.ts  virtualFile.ts
lib/visitor/: conditionaExpressionStripper.ts
test/: .gitignore  builder.test.ts  compiler.test.ts  context.test.ts  deps.ts  fileBag.test.ts  fs.test.ts  graph.test.ts  helpers.ts  importMap.test.ts  load.test.ts  optimizer.test.ts  path.test.ts  patterns.test.ts  resolve.test.ts  sourceFile.test.ts  sourceFileBag.test.ts  strip.test.ts  url.test.ts  utils.test.ts
test/__snapshots__/: builder.test.ts.snap  sourceFile.test.ts.snap
test/fixture/: client.ts  client.tsx  deno.json  importMap.json  server.ts  server.tsx
test/fixture/app/: client.tsx  deno.json  importMap.json  server.tsx
test/fixture/graph/: client.tsx
test/fixture/importMap/: importMap.json  mod.ts
test/fixture/public/: style.css
test/fixture/src/: app.tsx
(+6 files in other folders)
