[package]
name = "swc_mesozoic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
deno_ast = { version = "0.23.2", features = ["bundler", "codegen", "module_specifier", "proposal", "react", "sourcemap", "transforms", "typescript", "visit", "transpiling"] }
serde = { version = "1.0.152", features = ["derive", "rc"] }
wasm-bindgen = { version = "=0.2.84", features = ["serde-serialize", "enable-interning"] }
wasm-bindgen-futures = { version = "=0.4.34" }
anyhow = "1.0.72"
